--- a/exercicio-para-casa/package.json
+++ b/exercicio-para-casa/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "on6-xp-s8-projeto-1",
+  "name": "exercicio-para-casa",
   "version": "1.0.0",
-  "description": "Olá. Estamos chegando na metade do curso e como você já deve ter percebido, passa rápido! (e muito)",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/EdileneLopes/on6-xp-s8-projeto-1.git"
   },
-  "author": "",
+  "author": "Edilene",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/EdileneLopes/on6-xp-s8-projeto-1/issues"
